fix(navbar): text cut off due to incorrect height #9

--- a/modules/directives/navbar/less/ios/align.less
+++ b/modules/directives/navbar/less/ios/align.less
@@ -1,4 +1,5 @@
 .navbar-text() {
+  line-height: 1.5;
   display         : block;
   -webkit-box-flex: 1;
 }
