--- a/modules/directives/navbar/less/ios7/align.less
+++ b/modules/directives/navbar/less/ios7/align.less
@@ -3,6 +3,7 @@
 alignment of navbar children
 */
 .navbar-text() {
+  line-height: 1.5;
   display         : block;
   -webkit-box-flex: 1;
 }
